za dużo by opisywać

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,12 +6,14 @@
         xmlns:local="clr-namespace:SklepexPOL"
         xmlns:vm="clr-namespace:SklepexPOL.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1280">
+        Title="MainWindow" Height="720" Width="1280" ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Window.DataContext>
         <vm:MainViewModel x:Name="vm"/>
     </Window.DataContext>
     <Grid>
         <ContentControl x:Name="menuContent" Visibility="{Binding Path=MenuVis}"/>
         <ContentControl x:Name="gameContent" Visibility="{Binding Path=GameVis}"/>
+        <ContentControl x:Name="dateContent" Visibility="{Binding Path=DateVis}"/>
     </Grid>
 </Window>
