--- a/View/raport.xaml
+++ b/View/raport.xaml
@@ -19,11 +19,13 @@
             <SolidColorBrush Color="#FFFFFBD5"/>
         </Grid.Background>
         <StackPanel Margin="11" Grid.Row="0" Grid.Column="0">
-            <StackPanel>
-                <TextBlock>Dzisiejsza liczba klientów:</TextBlock>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Margin="0,0,10,0">Dzisiejsza liczba klientów:</TextBlock>
+                <TextBlock Text="{Binding TodayClientsValue}"/>
             </StackPanel>
             <StackPanel>
                 <TextBlock>Sprzedane towary:</TextBlock>
+                <TextBlock Text="{Binding TodaySellValue}"/>
             </StackPanel>
         </StackPanel>
         <StackPanel  Margin="11" Grid.Row="0" Grid.Column="1">
