Zmiana czcionki w panelu data na Consolas (Digital nie wspiera polskich znaków) i dodanie informacji o autorach i dacie utworzenia projektu w manu głównym

--- a/View/data.xaml
+++ b/View/data.xaml
@@ -15,11 +15,11 @@
             <TextBlock Text="{Binding TodayDateName}" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" 
                        FontSize="100" Foreground="#FF00FFC5" 
-                       FontFamily="/SklepexPOL;component/fonts/#DS-Digital"/>
+                       FontFamily="Consolas"/>
             <TextBlock Text="{Binding TodayDate, StringFormat=dd/MM/yyyy}" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" 
                        FontSize="100" Foreground="#FF00FFC5" 
-                       FontFamily="/SklepexPOL;component/fonts/#DS-Digital"/>
+                       FontFamily="Consolas"/>
         </StackPanel>
     </Grid>
 </UserControl>
