save przed burzą

--- a/View/menu.xaml
+++ b/View/menu.xaml
@@ -90,7 +90,7 @@
         <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
             <!--zrobić binding i komende -->
             <Button IsEnabled="{Binding IsSavedGame}" Command="{Binding WindowGame}">Kontynuuj</Button>
-            <Button Command="{Binding NewGameView}">Nowa gra</Button>
+            <Button IsEnabled="{Binding IsSQL}" Command="{Binding NewGameView}">Nowa gra</Button>
             <Button Command="{Binding InfoPdf}">Instrukcja obsługi</Button>
             <Button Command="{Binding ExitGame}">Wyjście</Button>
         </StackPanel>
