--- a/View/newgame.xaml
+++ b/View/newgame.xaml
@@ -29,7 +29,8 @@
         <StackPanel VerticalAlignment="Center" 
                     HorizontalAlignment="Center" Grid.Row="1">
             <TextBlock FontSize="24" FontFamily="Arial" Margin="10" HorizontalAlignment="Center">Wybierz rodzaj swojego sklepu:</TextBlock>
-            <ComboBox Width="470" FontFamily="Consolas" FontSize="24" Margin="10">
+            <ComboBox Width="470" FontFamily="Consolas" FontSize="24" Margin="10" 
+                      SelectedIndex="{Binding SelectedShopType}">
                 <ComboBoxItem IsSelected="True" Content="Ogólny"/>
                 <ComboBoxItem Content="Spożywczy"/>
                 <ComboBoxItem Content="Warzywniak"/>
