--- a/View/newgame.xaml
+++ b/View/newgame.xaml
@@ -77,9 +77,7 @@
                 <Button Command="{Binding CancelNG}"
                         Width="300" FontFamily="Consolas" FontSize="24" Height="50" 
                         Margin="10,10,30,10">
-                    <Button.CommandParameter>
-                        <Binding Path="Text" ElementName="ShopNameInput"/>
-                    </Button.CommandParameter>Anuluj</Button>
+                    Anuluj</Button>
                 <Button Command="{Binding NG}" Width="300" FontFamily="Consolas" FontSize="24" Height="50" Margin="30,10,10,10">Rozpocznij grę</Button>
             </StackPanel>
         </StackPanel>
